--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": null,
+      "password": "reagan01",
       "database": "menu_maqrdb",
       "host": "127.0.0.1",
       "port": 3306,
