--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "models",
   "version": "1.0.0",
   "description": "",
-  "main": "users.js",
+  "main": "server.js",
   "dependencies": {
+    "-": "0.0.1",
     "bcryptjs": "^2.4.3",
+    "browserify": "^17.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "g": "^2.0.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.4.4",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {},
